# tf_module_updater

./: README.md  pyproject.toml  tf_module_update.py  tf_module_updater.py
.github/workflows/: publish.yml
